testdata/badtype.go
// errorcheck

package foo

type a int

type t t // ERROR "invalid"

type z string
